# adversarial-spec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/adversarial-spec/: SKILL.md
skills/adversarial-spec/scripts/: __init__.py  debate.py  models.py  mutmut_config.py  prompts.py  providers.py  session.py  telegram_bot.py
skills/adversarial-spec/scripts/tests/: test_cli.py  test_model_calls.py  test_models.py  test_prompts.py  test_providers.py  test_session.py  test_telegram_bot.py
