[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-spec"
version = "1.0.0"
description = "Multi-model adversarial debate for spec refinement"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zak Cole", email = "zcole@linux.com"}
]
keywords = ["llm", "specification", "debate", "adversarial", "critique"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "litellm==1.80.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.11",
    "mypy==1.19.1",
    "types-requests==2.32.4.20260107",
    "pre-commit==4.0.1",
]

[project.scripts]
adversarial-spec = "adversarial_spec.debate:main"

[project.urls]
Homepage = "https://github.com/zscole/adversarial-spec"
Repository = "https://github.com/zscole/adversarial-spec"
Issues = "https://github.com/zscole/adversarial-spec/issues"

[tool.setuptools.packages.find]
where = ["skills"]
include = ["adversarial-spec*"]

[tool.setuptools.package-data]
"adversarial-spec" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["UP007"]  # Don't convert Optional[X] to X | None (requires Python 3.10+)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["skills/adversarial-spec/scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
